add the dot in image file path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <div class="main">
     <div class="logo">
-        <img src="/resources/images/Logo.png" alt="image">
+        <img src="./resources/images/Logo.png" alt="image">
     </div>
     <div class="nav">
         <p>Desitnations</p>
@@ -36,13 +36,13 @@
             <div class="button">
                 <span class="more">Fint out more</span>
                 <span class="play-button">
-                    <img src="/resources/images/Polygon 1.png" alt="image">
+                    <img src="./resources/images/Polygon 1.png" alt="image">
                 </span>
                 <span class="demo">Play Demo</span>
             </div>
         </div>
         <div class="web-photo">
-            <img src="/resources/images/Image.png" alt="">
+            <img src="./resources/images/Image.png" alt="">
         </div>
     </div>
     <div class="about-destination">
@@ -50,22 +50,22 @@
         <p class="offer">We offer Best Service</p>
         <div class="category">
             <div class="box1">
-                <img src="/resources/images/satellite-dish.png" alt="image">
+                <img src="./resources/images/satellite-dish.png" alt="image">
                 <h4>calculated weather</h4>
                 <p>Built wicket longer<br>admire do barton<br>vanity itself do in it.</p>
             </div>
             <div class="box2">
-                <img src="/resources/images/Group.png" alt="image">
+                <img src="./resources/images/Group.png" alt="image">
                 <h4>Best Flight</h4>
                 <p>Engrossed listening.<br>Park gate sell they<br>west hard for the.</p>
             </div>
             <div class="box3">
-                <img src="/resources/images/Group 50.png" alt="image">
+                <img src="./resources/images/Group 50.png" alt="image">
                 <h4>Local Events</h4>
                 <p>Barton vanity itself do<br>in it. Preferd to men it<br>engrossed listening. </p>
             </div>
             <div class="box4">
-                <img src="/resources/images/Group 49.png" alt="image">
+                <img src="./resources/images/Group 49.png" alt="image">
                 <h4>Customization</h4>
                 <p>We deliver outsourced<br>aviation services for<br>military customers</p>
             </div>
@@ -76,13 +76,13 @@
         <p class="destination">Top Desitnations</p>
         <div class="location">
             <div>
-                <img src="/resources/images/Destination_2.png" alt="image">
+                <img src="./resources/images/Destination_2.png" alt="image">
             </div>
             <div>
-                <img src="/resources/images/Destination.png" alt="image">
+                <img src="./resources/images/Destination.png" alt="image">
             </div>
             <div>
-                <img src="/resources/images/Destination_1.png" alt="">
+                <img src="./resources/images/Destination_1.png" alt="">
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@
             <p class="steps">Book Your Next Trip<br>IN 3 Easy Steps</p>
             <div class="box">
                 <div class="selection1">
-                    <img src="/resources/images/selection 1.png" alt="image">
+                    <img src="./resources/images/selection 1.png" alt="image">
                 </div>
                 <div class="choose-desti">
                     <h5>Choose Destination</h5>
@@ -101,7 +101,7 @@
             </div>
             <div class="box">
                 <div class="make-payment">
-                    <img src="/resources/images/water-sport 1.png" alt="image">
+                    <img src="./resources/images/water-sport 1.png" alt="image">
                 </div>
                 <div class="choose-desti">
                     <h5>Make Payment</h5>
@@ -110,7 +110,7 @@
             </div>
             <div class="box">
                 <div class="selected-date">
-                    <img src="/resources/images/Taxi Car Cab Vehicle Transport.png" alt="image">
+                    <img src="./resources/images/Taxi Car Cab Vehicle Transport.png" alt="image">
                 </div>
                 <div class="choose-desti">
                     <h5>Reach Airport on Selected Date</h5>
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="trip-to">
-            <img src="/resources/images/Image_1.png" alt="image">
+            <img src="./resources/images/Image_1.png" alt="image">
         </div>
     </div>
     <div class="feedback">
@@ -128,7 +128,7 @@
             <p class="about-us">What people say<br>about Us.</p>
         </div>
         <div class="costumber-comments">
-            <img src="/resources/images/Image_2.png" alt="">
+            <img src="./resources/images/Image_2.png" alt="">
             <p class="comments">“On the Windows talking painted pasture yet its<br>express parties use. Sure last upon he same as<br>knew next. Of believed or diverted no.”</p>
             <div class="mike">
                 <h3>Mike taylor</h3>
@@ -141,14 +141,14 @@
         </div>
     </div>
     <div class="logos">
-        <img style="height: 130px; width: 130px;" src="/resources/images/image 27.png" alt="image">
-        <img style="height: 110px; width: 172px;" src="/resources/images/image 28.png" alt="image">
-        <img style="height: 162px; width: 241px;" src="/resources/images/image 29.png" alt="image">
-        <img style="height: 32px; width: 162px;" src="/resources/images/image 30.png" alt="image">
-        <img style="height: 21px; width: 94px;" src="/resources/images/image 31.png" alt="image">
+        <img style="height: 130px; width: 130px;" src="./resources/images/image 27.png" alt="image">
+        <img style="height: 110px; width: 172px;" src="./resources/images/image 28.png" alt="image">
+        <img style="height: 162px; width: 241px;" src="./resources/images/image 29.png" alt="image">
+        <img style="height: 32px; width: 162px;" src="./resources/images/image 30.png" alt="image">
+        <img style="height: 21px; width: 94px;" src="./resources/images/image 31.png" alt="image">
     </div>
     <div class="subscribe">
-        <img src="/resources/images/Group 77.png" alt="image">
+        <img src="./resources/images/Group 77.png" alt="image">
         <p>Subscribe to get information, latest news and other<br>interesting offers about Jadoo</p>
         <div class="input-box">
             <!-- <span><i class="fa-regular fa-envelope"></i></span>
@@ -163,7 +163,7 @@
     </div>
     <div class="footer">
         <div>
-            <img src="/resources/images/Jado..png" alt="image">
+            <img src="./resources/images/Jado..png" alt="image">
             <p>Book your trip in minute, get full<br>Control for much longer.</p>
         </div>
         <div class="foot-panal">
@@ -185,7 +185,7 @@
             <p>Low fare tips</p>
         </div>
         <div>
-            <img src="/resources/images/Outbound.png" alt="">
+            <img src="./resources/images/Outbound.png" alt="">
         </div>
     </div>
     <p class="last-para">All rights reserved@jadoo.co</p>
